[package]
name = "tty-override"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"
nix = { version = "0.28", default-features = false, features = ["fs", "process", "term"] }
regex = "1.10.4"
toml = "0.8.12"
